--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
       border-top-right-radius: 7px;
     }
     .category-icon {
+      display: inline-block;
       font-size: 0.75rem;
       transition: transform 0.2s;
     }
