--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
     const STANDARD_TUNING = [4, 9, 2, 7, 11, 4]; // E A D G B E (in semitones from C)
     const NOTE_NAMES_SHARPS = ['C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#', 'A', 'A#', 'B'];
     const NOTE_NAMES_FLATS = ['C', 'Db', 'D', 'Eb', 'E', 'F', 'Gb', 'G', 'Ab', 'A', 'Bb', 'B'];
+    const NOTE_NAMES = NOTE_NAMES_SHARPS; // Default to sharps for backwards compatibility
     const NOTE_TO_SEMITONE = {
       'C': 0, 'C#': 1, 'Db': 1, 'D': 2, 'D#': 3, 'Eb': 3,
       'E': 4, 'F': 5, 'F#': 6, 'Gb': 6, 'G': 7, 'G#': 8,
@@ -476,6 +477,7 @@
     };
     const PREFERRED_ROOTS_SHARPS = ['C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#', 'A', 'A#', 'B'];
     const PREFERRED_ROOTS_FLATS = ['C', 'Db', 'D', 'Eb', 'E', 'F', 'Gb', 'G', 'Ab', 'A', 'Bb', 'B'];
+    const ALL_ROOTS = PREFERRED_ROOTS_SHARPS; // Default to sharps for backwards compatibility
     const ENHARMONIC_MAP = {
       'C#': 'Db', 'Db': 'C#',
       'D#': 'Eb', 'Eb': 'D#',
