Fix enharmonic toggle - critical bugs resolved
Critical Bug #1: Root value lost when switching enharmonics
- Problem: rootSelect.value was read AFTER clearing innerHTML
- Result: Always defaulted to 'A' instead of converting A# → Bb
- Fix: Save currentValue BEFORE clearing the select
- Now: A# correctly becomes Bb, C# becomes Db, etc.

Critical Bug #2: Notes didn't update after toggle
- Problem: Called non-existent loadScale() function
- Result: Nothing happened after clicking enharmonic button
- Fix: Changed to call updateDisplay() which recalculates and redraws
- Now: All note names update immediately (even with span selected)

Critical Bug #3: Subsequent changes didn't work
- Root cause: Both bugs above compounded
- Fix: Both issues resolved with above fixes

What works now:
✅ Select A# → click ♯ → shows Bb in selector
✅ Note names on fretboard update immediately
✅ Works with practice box (span) selected
✅ Subsequent toggles work correctly
✅ All 12 chromatic notes convert properly

--- a/index.html
+++ b/index.html
@@ -1445,9 +1445,11 @@
     }
 
     function populateRootSelect() {
-      rootSelect.innerHTML = '';
-      const roots = state.enharmonicPreference === 'sharps' ? PREFERRED_ROOTS_SHARPS : PREFERRED_ROOTS_FLATS;
+      // IMPORTANT: Save current value BEFORE clearing the select
       const currentValue = rootSelect.value || 'A';
+      const roots = state.enharmonicPreference === 'sharps' ? PREFERRED_ROOTS_SHARPS : PREFERRED_ROOTS_FLATS;
+
+      rootSelect.innerHTML = '';
 
       roots.forEach(root => {
         const option = document.createElement('option');
@@ -1930,7 +1932,7 @@
       e.currentTarget.textContent = state.enharmonicPreference === 'sharps' ? '♯' : '♭';
       e.currentTarget.title = state.enharmonicPreference === 'sharps' ? 'Showing sharps (click for flats)' : 'Showing flats (click for sharps)';
       populateRootSelect();
-      loadScale(state.selectedScaleId, rootSelect.value);
+      updateDisplay(); // Recalculate scale with new enharmonic preference
     });
 
     document.getElementById('zoomIn').addEventListener('click', () => {
