Fix root selector layout - truly inline now and more compact
Critical Layout Fix:
- Moved label into same flex container as select and button
- Before: label was in nested div, causing stacking
- After: label, select, button all siblings in one flex row

Width Reduction:
- Root selector: 55px → 50px (fits 2 chars perfectly)
- Button: Fixed width 38px (removed padding, was 0.5rem)
- Gap: 0.5rem → 0.25rem (tighter spacing)

Result:
- All three elements truly on same line: Root [A#▼] [♯]
- More compact - saved additional 10-15px
- Button is square (38x38px) for clean appearance
- No more vertical stacking issue

--- a/index.html
+++ b/index.html
@@ -315,12 +315,10 @@
       </div>
     </div>
 
-    <div style="display: inline-flex; gap: 0.5rem; align-items: flex-end;">
-      <div>
-        <label>Root</label>
-        <select id="rootSelect" style="width: 55px;"></select>
-      </div>
-      <button id="enharmonicToggle" class="control-btn" title="Showing sharps (click for flats)" style="height: 38px; padding: 0 0.5rem; margin-bottom: 0; min-width: 38px;">♯</button>
+    <div style="display: flex; gap: 0.25rem; align-items: flex-end;">
+      <label style="margin-right: 0.25rem;">Root</label>
+      <select id="rootSelect" style="width: 50px;"></select>
+      <button id="enharmonicToggle" class="control-btn" title="Showing sharps (click for flats)" style="height: 38px; width: 38px; padding: 0; margin-bottom: 0;">♯</button>
     </div>
 
     <div id="fingeringPatternContainer" style="display: none;">
