Fix root selector layout - override parent flex-direction
Root Cause Found:
- Parent CSS rule: .scale-selector > div { flex-direction: column; }
- This forced ALL child divs to stack vertically
- Overrode my inline display: flex style

The Fix:
- Added flex-direction: row !important
- Now explicitly overrides parent column layout
- Forces horizontal layout: Root [A▼] [♯]

What was happening:
.scale-selector has a CSS rule that applies flex-direction: column
to all direct child divs. My root selector div inherited this,
causing vertical stacking despite inline flex styles.

Result:
✅ Label, select, and button now on ONE line
✅ Compact 50px selector width
✅ Square 38x38px button
✅ Proper horizontal layout

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       </div>
     </div>
 
-    <div style="display: flex; gap: 0.25rem; align-items: flex-end;">
+    <div style="display: flex; flex-direction: row !important; gap: 0.25rem; align-items: flex-end;">
       <label style="margin-right: 0.25rem;">Root</label>
       <select id="rootSelect" style="width: 50px;"></select>
       <button id="enharmonicToggle" class="control-btn" title="Showing sharps (click for flats)" style="height: 38px; width: 38px; padding: 0; margin-bottom: 0;">♯</button>
