--- a/index.html
+++ b/index.html
@@ -2468,7 +2468,7 @@
 
       // Position indicator (always show for non-open position chords)
       if (!isOpenPosition) {
-        svg += `<text x="12" y="${margin + fretHeight/2 + 4}" font-family="sans-serif" font-size="10" fill="#8a8a9a" text-anchor="end">${startFret}</text>`;
+        svg += `<text x="8" y="${margin - 2}" font-family="sans-serif" font-size="10" fill="#8a8a9a" text-anchor="end">${startFret}</text>`;
       }
 
       // Draw strings (vertical lines)
